# enso

./: .env.sample  .eslintrc.cjs  AGENTS.md  PRD.md  enso.db  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
apps/mobile/: package.json  tsconfig.json  vitest.config.ts
apps/mobile/enso-lynx/: package.json
apps/mobile/enso-lynx/src/: App.tsx
apps/mobile/scripts/: dev.ts
apps/mobile/src/: App.tsx  index.ts
apps/mobile/src/__tests__/: App.test.tsx
apps/mobile/thoughtz-lynx/: package.json
apps/mobile/thoughtz-lynx/src/: App.tsx
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.css  App.tsx  index.css  main.tsx  workspaceData.ts
docs/: configuration.md  next-steps.md  ux-workspace.md
docs/adr/: 2025-09-27-fastapi-offline-sync.md
docs/setup/: ai.md  backend.md  lynx.md
scripts/: dev.sh
services/backend/: README.md  alembic.ini  pyproject.toml
services/backend/alembic/: env.py
services/backend/alembic/versions/: 2025_09_27_0001_create_thought_tables.py
services/backend/enso_api/: __init__.py  config.py  database.py  main.py  models.py
services/backend/enso_api/domain/: ai.py  thought.py
services/backend/enso_api/repositories/: thoughts.py
services/backend/enso_api/routers/: __init__.py  ai.py  sync.py  thoughts.py
services/backend/enso_api/services/: ai.py
services/backend/enso_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/backend/tests/: conftest.py  test_thoughts_api.py
(+21 files in other folders)
