[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enso-backend"
version = "0.1.0"
description = "FastAPI backend for Enso thought organization app"
authors = [{ name = "Enso Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<0.112",
  "uvicorn[standard]>=0.30,<0.31",
  "sqlalchemy>=2.0,<2.1",
  "pydantic>=2.7,<3.0",
  "python-multipart>=0.0.9",
  "alembic>=1.13,<1.15"
]

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<0.24",
  "httpx>=0.27,<0.28"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["enso_api*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["enso_api"]
